# tokka-bench

./: .gitignore  2025-08-25-tokka-bench-evaluate-tokenizers-multilingual.mdx  CONTRIBUTING.md  README.md  TESTING.md  TYPE_SAFETY_SUMMARY.md  main.py  pyproject.toml  streamlit_app.py  tokka-bench-enhancement-summary.md
.cursor/rules/: tokka-bench.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general.md
arxiv-submission/: main.bbl
cli/: benchmark.py  dashboard.py  visualize.py
data/results/: GPT-2.json  GPT-4.json  Gemma 3.json  Kimi K2.json  Llama 3.1.json  Qwen3.json  Qwen_Qwen3_30B_A3B_Instruct_2507.json  Xenova_gpt_4.json  gemma3.json  google_gemma_3_27b_it.json  gpt-oss.json  gpt2.json  gpt4.json  llama3.json  meta_llama_Llama_3.1_8B.json  moonshotai_Kimi_K2_Instruct.json  openai_community_gpt2.json  openai_gpt_oss_120b.json  test-new-metrics.json  test_1.json  test_run.json
paper/: figures.py  main.tex  references.bib
src/: fineweb-2-languages.csv  starcoderdata-dirs.csv
src/tests/: test_metrics.py  test_unicode_utils.py
src/tokka_bench/: __init__.py  benchmark.py  cli.py  data_utils.py  fast_benchmark.py  metrics.py  tokenizer.py  unicode_utils.py
src/tokka_bench/visualization/: __init__.py  app.py  categories.py  charts.py  constants.py  controls.py  dashboard.py  data.py
src/visualization/: app.py  categories.py  charts.py  constants.py  controls.py  dashboard.py  data.py
