[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokka-bench"
version = "0.1.0"
description = "A benchmark for comparing different tokenizers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tokenizers>=0.21.1",
    "pandas>=2.0.0",
    "transformers>=4.40.0",
    "omegaconf>=2.3.0",
    "datasets>=2.0.0",
]

[project.scripts]
benchmark = "cli.benchmark:main"
