[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokka-bench"
version = "0.1.0"
description = "Tokenizer benchmarking across multiple languages"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.21.0",
    "datasets>=2.0.0",
    "pandas>=1.5.0",
    "omegaconf>=2.3.0",
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
]

[project.scripts]
benchmark = "cli.benchmark:main"
